force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Informações de autenticação da integração com o SAP</description>
    <label>Integration</label>
</CustomObject>