force-app/main/default/objects/Integration__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Campo para desativar integrações</inlineHelpText>
    <label>Desativar</label>
    <type>Checkbox</type>
</CustomField>