force-app/main/default/objects/Integration__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Método</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>