force-app/main/default/objects/Integration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Senha</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>