force-app/main/default/objects/Integration__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Usuário</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>